<resources>
    <string name="app_name">Kolizey</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_tours">Мої тури</string>
    <string name="favourite">Вподобане</string>
    <string name="information">Інфо</string>
    <string name="profile">Профіль</string>
    <string name="help">Допомога</string>

    <string name="intro_tours">На цій сторінці ви будете бачити всі куплені\nвами тури. Є можливість преглянути\nактуальні тури та архівні.</string>
    <string name="intro_fav">Не загуби тур - лайкни його!\nНа цій сторінці зберігаються всі\nобрані вами тури.</string>
    <string name="intro_info">На цій сторінці ви знайдете інформацію\nпро нашу тур агенцію.</string>
    <string name="intro_help">Зв’яжіться з нашою тех.підтримкою та\nотримайте відповідь на всі свої запитання.</string>

    <string name="next">Далі</string>
    <string name="tech_help">Технічна підтримка</string>
    <string name="company_name">Назва компанії</string>
    <string name="telephone_number">+38 (066) 684-64-24</string>
    <string name="contact_name">support@gmail.com</string>
    <string name="address_contacts">Наші контакти</string>
    <string name="address_desc">“Колізей”\nОфіс: м. Львів,\nвул. Братів Рогатинців 18.</string>
    <string name="info_long">Інформація</string>
    <string name="info_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna, adipiscing mattis amet tellus blandit quis ullamcorper mollis vel. Vitae eget pellentesque sed nascetur nisl elit neque quis. Interdum eget mauris quis aliquet pulvinar eu ornare eu.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Quis eu neque, proin urna, aenean porttitor. Nunc mi lectus lectus hendrerit sapien gravida. Tristique vitae rhoncus, sit justo condimentum eu, porttitor tincidunt. In viverra elementum ultricies auctor commodo tortor quisque sollicitudin odio. Iaculis tincidunt libero fringilla enim amet sit leo. Ipsum lobortis at eu varius vulputate ac nulla amet. Massa eu lectus duis libero ac. Rhoncus laoreet egestas commodo mauris volutpat tortor consectetur. Risus eget dignissim vel magna erat elementum.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Urna, adipiscing mattis amet tellus blandit quis ullamcorper mollis vel. Vitae eget pellentesque sed nascetur nisl elit neque quis. Interdum eget mauris quis aliquet pulvinar eu ornare eu.</string>
    <string name="have_account">Маєте акаунт?</string>
    <string name="sign_in">Увійти</string>
    <string name="dont_have_account">Ще немає акаунта?</string>
    <string name="registration">Реєстрація</string>
    <string name="name">Ім’я</string>
    <string name="surname">Прізвище</string>
    <string name="tele_number">Номер телефону</string>
    <string name="mail">E-mail</string>
    <string name="number_hint">+380</string>
    <string name="mail_hint">noname@gmail.com</string>
    <string name="accept_code">Введіть код підтвердження</string>
    <string name="one_minute_wait">Протягом 1 хвилини надійде код підтвердження</string>
    <string name="register">Зареєструватись</string>
    <string name="sign_in_text">Вхід</string>
    <string name="my_profile">Мій профіль</string>
    <string name="test_name">Маруся Чурай</string>
    <string name="test_number">+38 (099) 111-11-11</string>
    <string name="test_city">м. Львів</string>
    <string name="test_mail">email@email.com</string>
    <string name="profile_edit">Редагування профілю</string>
    <string name="where_is_your_location">Де ви знаходитесь?</string>
    <string name="test_city_2">Львів</string>
    <string name="save">Зберегти</string>
    <string name="my_manager">Мій менеджер</string>
    <string name="test_manager_name">Ірина П.</string>
    <string name="test_company">“Колізей”</string>
    <string name="manager_test_telephone">+38 (099) 000-00-00</string>
    <string name="test_manager_mail">admin@admin.com</string>
    <string name="test_manager_location">м. Львів, вул. Братів Рогатинців 18</string>
    <string name="tour_history">Історія турів</string>
    <string name="booked_tours">Збережені тури</string>
    <string name="tour_date_example">15 - 23 вересня</string>
    <string name="hotel_name_example">Sand beach hotel</string>
    <string name="test_city_from">Київ</string>
    <string name="test_to">Туреччина, Анталья</string>
    <string name="test_flighters">2 дорослих</string>
    <string name="test_price">12 860₴</string>
    <string name="hotel_example">Sand beach hotel</string>
    <string name="example_person_count">Ціна за 2 дорослих</string>
    <string name="flight_type_included">Переліт включений</string>
    <string name="filter">Фільтр</string>
    <string name="nothing_have_found">За вашим запитом нічого\nне знайдено</string>
    <string name="our_tours">Наші тури</string>
    <string name="searched_our_tours">Тури за вашим запитом</string>
    <string name="filters">Фільтри</string>
    <string name="filter_place">Країна, курорт, готель</string>
    <string name="flight_from">Виліт з</string>
    <string name="date">Дати</string>
    <string name="who_flights">Хто летить</string>
    <string name="search_more">Розширений пошук</string>
    <string name="from">Від</string>
    <string name="price">Вартість</string>
    <string name="till">До</string>
    <string name="hotel_class">Клас готелю</string>
    <string name="hotel_type">Тип готелю</string>
    <string name="club">Клубний</string>
    <string name="family">Сімейний</string>
    <string name="elders">Для дорослих</string>
    <string name="beach">Пляж</string>
    <string name="first_line">1 - ша лінія</string>
    <string name="second_line">2 - га лінія</string>
    <string name="third_line">3 - тя лінія</string>
    <string name="ob">OB</string>
    <string name="bb">BB</string>
    <string name="hb">HB</string>
    <string name="fb">FB</string>
    <string name="al">Al</string>
    <string name="ual">UAl</string>
    <string name="service">Послуга</string>
    <string name="services">Послуги</string>
    <string name="apply_filters">Застосувати фільтри</string>
    <string name="where_to_flight">Оберіть куди подорожуєте</string>
    <string name="france">Франція</string>
    <string name="paris">Париж</string>
    <string name="ukraine">Україна</string>
    <string name="who_flight">Хто летить</string>
    <string name="elder">Дорослі</string>
    <string name="children">Діти</string>
    <string name="age">Вік</string>
    <string name="accept">Підтвердити</string>
    <string name="date_format">MM/dd/yyyy</string>
    <string name="about_hotel_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Habitant accumsan, pellentesque at pharetra aenean. Ultricies habitasse eu id nisi cursus diam placerat felis fringilla.\n\nArcu, facilisi vulputate in arcu. Quam mattis bibendum luctus placerat. Tortor vel eleifend at semper morbi etiam. Pellentesque lorem ligula maecenas neque ullamcorper praesent. Ultricies placerat sed sodales quis.</string>
    <string name="booked">Забронювати</string>
</resources>