<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.bottom_navigation_fragments.ProfileFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rome_uzor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darker_main_color"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/have_account" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_sign_background"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/sign_in"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/reg_second"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rome_uzor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darker_main_color"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/dont_have_account" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_sign_background"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/registration"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>