<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/tour_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="4"
        android:scaleType="centerCrop"
        android:src="@drawable/tour_history_image"
        android:adjustViewBounds="true"
        app:shapeAppearanceOverlay="@style/profileImage"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/reg_second">

        <TextView
            android:id="@+id/tour_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color"
            android:textStyle="bold"
            android:text="@string/hotel_name_example"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/divider"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.05"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/tour_date_example"
            android:textColor="@color/tour_date"
            app:layout_constraintStart_toStartOf="@id/tour_title"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/tour_title"
            android:layout_marginTop="5dp"
            app:layout_constraintHorizontal_bias="0.2"/>

        <LinearLayout
            android:id="@+id/from_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toStartOf="@id/date"
            app:layout_constraintEnd_toEndOf="@id/divider"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/test_city_from"
                android:textColor="@color/main_color"
                android:gravity="center_horizontal"
                />

            <ImageView
                android:id="@+id/transport_type"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/aeroplane"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/test_to"
                android:textColor="@color/main_color"
                android:gravity="center_horizontal"
                />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/from_to"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#EBEBEB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintVertical_bias="0.2"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/divider"
            app:layout_constraintEnd_toEndOf="@id/divider">

            <TextView
                android:id="@+id/travelers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/test_flighters"
                android:textColor="@color/main_color"
                android:layout_weight="1"
                android:gravity="start"
                />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/test_price"
                android:textColor="@color/price_color"
                android:layout_weight="1"
                android:gravity="end"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>